--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -149,14 +149,14 @@ jobs:
           git config user.email "github-actions@github.com"
         
           if [ "$INSTALL" = "true" ]; then
-            if [ -f "../${OUTPUT_FILE}" ]; then
+            if [ -f "../${ORIGINAL_REPO_URL}/${OUTPUT_FILE}" ]; then
               if [ -f "${OUTPUT_FILE}" ]; then
                 echo "⚠️ El archivo '${OUTPUT_FILE}' ya existe en el repo. No se subirá de nuevo."
                 exit 0
               fi
         
               echo "📄 Copiando archivo '${OUTPUT_FILE}' al repo '${CLONED_REPO_NAME}'"
-              cp "../${OUTPUT_FILE}" .
+              cp "../${ORIGINAL_REPO_URL}/${OUTPUT_FILE}" .
               git add "${OUTPUT_FILE}"
               git commit -m "📦 Añadiendo salida de Terraform para ${ORIGINAL_REPO_NAME}"
             else
