--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -161,6 +161,7 @@ jobs:
               git add "${OUTPUT_FILE}"
               git commit -m "📦 Añadiendo salida de Terraform para ${ORIGINAL_REPO_NAME}"
             else
+              ls -lrt "../${ORIGINAL_REPO_URL}/${OUTPUT_FILE}"
               echo "❌ Archivo de salida '../${OUTPUT_FILE}' no encontrado. No se puede subir."
               exit 1
             fi
