Conf repo infra terraform historico.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -153,8 +153,8 @@ jobs:
               ls -lrt
             else
               echo "📄 Copiando archivo '${OUTPUT_FILE}' al repo '${CLONED_REPO_NAME}'"
-              ls -lrt ../${ORIGINAL_REPO_URL}
-              cp "../${ORIGINAL_REPO_URL}/${OUTPUT_FILE}" .
+              ls -lrt ../${ORIGINAL_REPO_NAME}
+              cp "../${ORIGINAL_REPO_NAME}/${OUTPUT_FILE}" .
               git add "${OUTPUT_FILE}"
               git commit -m "📦 Añadiendo salida de Terraform para ${ORIGINAL_REPO_NAME}"
               echo "📤 Haciendo push de los cambios al repo infraTerraform..."
