Conf repo infra terraform historico.

--- a/config/config.properties
+++ b/config/config.properties
@@ -6,7 +6,7 @@ REPO_URL=https://github.com/Jose26Madrid/terraform.git
 #   true  -> ejecuta terraform init + apply
 #   false -> ejecuta terraform destroy
 #   vacío o no definido -> no hace nada
-install=false
+install=''
 
 # MIT License
 # Copyright (c) 2025 Jose Magariño
